<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.account.signUp.AccountSignUp2Fragment"
    >

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/backButton"
        android:background="@drawable/custom_ripple_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="회원가입"
        android:textFontWeight="500"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>



    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textFontWeight="500"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/password"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_round"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"
        android:padding="10dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintWidth_percent="0.91"
        app:layout_constraintHeight_percent="0.084"
        />






    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/completeBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="132dp"
        app:layout_constraintHeight_percent="0.082"
        android:enabled="false"
        android:background="@drawable/custom_ripple_effect"
        android:gravity="center"
        android:text="@string/next"
        android:textFontWeight="700"
        android:textColor="@color/disableTextColor"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>