<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.account.signUp.AccountSignUp1Fragment">

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="로그인"
        android:textFontWeight="700"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/backButton"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="이메일"
        android:textFontWeight="500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_round"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="#C5C8CE"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        app:layout_constraintWidth_percent="0.91" />

    <TextView
        android:id="@+id/emailErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:text="이메일을 다시확인해주세요"
        android:textColor="@color/red"
        android:textFontWeight="400"
        android:textSize="14dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/pwEditText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_round"
        android:hint="비밀번호를 입력해주세요"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="15dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintWidth_percent="0.91" />

    <TextView
        android:id="@+id/pwErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="비밀번호를 다시 확인해주세요"
        android:textColor="@color/red"
        android:textFontWeight="400"
        android:textSize="14dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/custom_ripple_effect"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/whiteGray"
        android:textFontWeight="700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintWidth_percent="0.91" />

    <TextView
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/useFirst"
        android:textColor="#646F7C"
        android:textFontWeight="500"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nextBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.023014959" />


</androidx.constraintlayout.widget.ConstraintLayout>